# holographic-display

./: .gitignore  notes_pt.md  pyproject.toml  questions.txt  requirements-collab.txt  requirements.txt  run_pipeline.py
checkpoints/: losses.pt
checkpoints/run_20260419_200000/: losses.pt
checkpoints/run_20260420_093027/: losses.pt
checkpoints/run_20260420_101109/: losses.pt
holographic_display/: constants.py  dataset.py  debug_dataset.py  evaluate.py  forward_model.py  generate_dataset.py  model.py  train.py  train_etro.py  utils.py
holographic_display/notebooks/: forward_model.ipynb
