[tool.poetry]
name = "dsp-course-samuel"
version = "0.1.0"
description = ""
authors = [
    "Samuel Chantal Rudi Gerin",
    "Manuel Montoya <manuel.montoya.zuluaga@vub.be>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
numpy = "^2.4.3"
plotly = "^6.6.0"
torch = "^2.10.0"
notebook = "^7.5.5"
torchvision = "^0.25.0"
imageio = "^2.37.3"
tqdm = "^4.67.3"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
